--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
           </div>
           <div class="site-info">
             <span>© 2020 Random Restaurant</span>
-            <span>Developed by Ram Maheshwari</span>
+            <span>Developed by Ravi Jha</span>
             <span></span>
           </div>
         </div>
